Updated Gradle to 7.2